Change # 测试验证器开关特性
