# sample/proto/sample.swagger.json
@@ -97,6 +97,12 @@
       "properties": {
         "ping": {
           "type": "string"
+        },
+        "st_meta_data": {
+          "type": "object"
+        },
+        "st_custom_data": {
+          "type": "object"
         }
       }
     },
@@ -106,11 +112,14 @@
         "pong": {
           "type": "string"
         },
-        "data": {
-          "$ref": "#/definitions/protobufAny"
-        },
-        "meta_data": {
+        "st_meta_data": {
           "type": "object"
+        },
+        "st_custom_data": {
+          "type": "object"
+        },
+        "any_data": {
+          "$ref": "#/definitions/protobufAny"
         }
       }
     },
